# chess-app

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml  run.py
src/chess_web/: __init__.py  app.py  asgi.py  auth.py  replay.py  storage.py
src/chess_web/api/: __init__.py  auth.py  game.py  moves.py  persistence.py  records.py
src/chess_web/models/: __init__.py  ai.py  board.py  game.py  pieces.py
src/chess_web/static/css/: auth.css  style.css
src/chess_web/static/js/: chess.js  leaderboard.js  review.js
src/chess_web/templates/: base.html  game.html  leaderboard.html  review.html
supabase/: chess_app_schema.sql
