[project]
name = "chess-web"
version = "0.1.0"
description = "A web-based chess game built with Flask and Jinja"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-session>=0.8.0",
    "flask-restx>=1.3.0",
    "python-dotenv>=1.0.1",
    "asgiref>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]

[project.scripts]
chess-web = "chess_web.app:main"
chess-web-asgi = "chess_web.asgi:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
